// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar has correct default options 1`] = `
<div
  className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-sidebar grommetux-sidebar--full"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}
>
  Testing
</div>
`;

exports[`Sidebar has correct size="large" and fixed=true rendering 1`] = `
<div
  className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-sidebar grommetux-sidebar--fixed grommetux-sidebar--full grommetux-sidebar--large"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}
>
  Testing
</div>
`;
